bug fix "special characters are not allowed"